adicionando config para o banco

--- a/SisAcad/SisAcad.Persistencia/SisAcad.Persistencia.csproj
+++ b/SisAcad/SisAcad.Persistencia/SisAcad.Persistencia.csproj
@@ -49,13 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\201705050047175_001.cs" />
-    <Compile Include="Migrations\201705050047175_001.Designer.cs">
-      <DependentUpon>201705050047175_001.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705050110294_002.cs" />
-    <Compile Include="Migrations\201705050110294_002.Designer.cs">
-      <DependentUpon>201705050110294_002.cs</DependentUpon>
+    <Compile Include="Config\AlunoConfig.cs" />
+    <Compile Include="Config\CursoConfig.cs" />
+    <Compile Include="Config\ProfessorConfig.cs" />
+    <Compile Include="Config\TurmaConfig.cs" />
+    <Compile Include="Config\UsuarioConfig.cs" />
+    <Compile Include="Migrations\201705120009062_000.cs" />
+    <Compile Include="Migrations\201705120009062_000.Designer.cs">
+      <DependentUpon>201705120009062_000.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,11 +73,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201705050047175_001.resx">
-      <DependentUpon>201705050047175_001.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705050110294_002.resx">
-      <DependentUpon>201705050110294_002.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201705120009062_000.resx">
+      <DependentUpon>201705120009062_000.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
