--- a/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Console/App.config
+++ b/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Console/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+  <entityFramework>
+    <contexts>
+      <context type="Infnet.SIFISCON.Persistence.SIFISCONContext, SIFISCONDB">
+        <databaseInitializer type="Infnet.SIFISCON.Persistence.SIFISCONInitializer, SIFISCONDB" />
+      </context>
+    </contexts>
+  </entityFramework>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SIFISCONDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
