--- a/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Domain/Infnet.SIFISCON.Domain.csproj
+++ b/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Domain/Infnet.SIFISCON.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13859D3B-832B-4A1B-B26A-26A1DABACE78}</ProjectGuid>
+    <ProjectGuid>{208D9195-399E-4B61-A099-7F279E8CAFAA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Infnet.SIFISCON.Persistence</RootNamespace>
-    <AssemblyName>Infnet.SIFISCON.Persistence</AssemblyName>
+    <RootNamespace>Infnet.SIFISCON.Domain</RootNamespace>
+    <AssemblyName>Infnet.SIFISCON.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,9 +36,6 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,6 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Entities\AutoDeInfracao.cs" />
+    <Compile Include="Entities\Endereco.cs" />
+    <Compile Include="Entities\Processo.cs" />
+    <Compile Include="Entities\Produto.cs" />
+    <Compile Include="Entities\Fornecedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
