--- a/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Persistence/Infnet.SIFISCON.Persistence.csproj
+++ b/SIFISCON/Infnet - SIFISCON/Infnet.SIFISCON.Persistence/Infnet.SIFISCON.Persistence.csproj
@@ -51,8 +51,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\SIFISCONContext.cs" />
-    <Compile Include="Context\SIFISCONInitializer.cs" />
+    <Compile Include="Migrations\201707081628266_InitialCreate.cs" />
+    <Compile Include="Migrations\201707081628266_InitialCreate.Designer.cs">
+      <DependentUpon>201707081628266_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -63,6 +68,11 @@
       <Project>{208D9195-399E-4B61-A099-7F279E8CAFAA}</Project>
       <Name>Infnet.SIFISCON.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707081628266_InitialCreate.resx">
+      <DependentUpon>201707081628266_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
