--- a/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.Infra.Data/ProjetoModeloDDD.Infra.Data.csproj
+++ b/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.Infra.Data/ProjetoModeloDDD.Infra.Data.csproj
@@ -32,11 +32,9 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -50,6 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\ProjetoModeloContext.cs" />
+    <Compile Include="Migrations\201709062004153_Initial.cs" />
+    <Compile Include="Migrations\201709062004153_Initial.Designer.cs">
+      <DependentUpon>201709062004153_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ComentarioRepository.cs" />
@@ -64,7 +66,11 @@
       <Name>ProjetoModeloDDD.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709062004153_Initial.resx">
+      <DependentUpon>201709062004153_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
