--- a/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.MVC/packages.config
+++ b/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.MVC/packages.config
@@ -17,15 +17,28 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="SimpleInjector" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.MVC3" version="4.0.8" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
