--- a/WCF Project/MyStoreSolution/WcfOrders/Web.config
+++ b/WCF Project/MyStoreSolution/WcfOrders/Web.config
@@ -9,6 +9,20 @@
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IPriceService" />
+        <binding name="BasicHttpBinding_IWarehouseService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:54900/PriceService.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IPriceService" contract="PriceService.IPriceService"
+        name="BasicHttpBinding_IPriceService" />
+      <endpoint address="http://localhost:54896/WarehouseService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWarehouseService"
+        contract="WarehouseService.IWarehouseService" name="BasicHttpBinding_IWarehouseService" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior>
