--- a/WCF Project/MyStoreSolution/WcfOrders/WcfOrders.csproj
+++ b/WCF Project/MyStoreSolution/WcfOrders/WcfOrders.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -90,6 +91,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserNameValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WcfOrderServiceLib\WcfOrderServiceLib.csproj">
