--- a/WCF Project/MyStoreSolution/WcfWarehouse/WcfWarehouse.csproj
+++ b/WCF Project/MyStoreSolution/WcfWarehouse/WcfWarehouse.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IWarehouseService.cs" />
+    <Compile Include="NoStockException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WarehouseService.cs" />
     <Compile Include="WareHouseStorage.cs" />
