--- a/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.MVC/packages.config
+++ b/Prova MVC/ProjetoModeloDDD/ProjetoModeloDDD.MVC/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="3.1.1" targetFramework="net452" />
-  <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
+  <package id="bootstrap" version="4.0.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="jQuery" version="3.3.1" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net452" />
@@ -22,21 +22,22 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="popper.js" version="1.12.9" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
-  <package id="SimpleInjector" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.Web" version="4.0.8" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.8" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="4.0.8" targetFramework="net452" />
-  <package id="SimpleInjector.MVC3" version="4.0.8" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.MVC3" version="4.0.12" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="WebActivator" version="1.4.4" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
