--- a/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
+++ b/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="Domain\AudioBook.cs" />
     <Compile Include="Domain\BiologicBook.cs" />
     <Compile Include="Domain\DigitalBook.cs" />
@@ -49,6 +50,8 @@
     <Compile Include="Abstract\PhysicalItem.cs" />
     <Compile Include="Librarian.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaitList\Decorator.cs" />
+    <Compile Include="WaitList\WaitList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
