--- a/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
+++ b/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
@@ -45,13 +45,15 @@
     <Compile Include="Domain\BiologicBook.cs" />
     <Compile Include="Domain\DigitalBook.cs" />
     <Compile Include="Domain\TechBook.cs" />
+    <Compile Include="DownloadLink\DownloadSourceDecorator.cs" />
+    <Compile Include="DownloadLink\S3DownloadSource.cs" />
     <Compile Include="Factory\LibraryItensFactory.cs" />
     <Compile Include="Abstract\DigitalItem.cs" />
     <Compile Include="Abstract\PhysicalItem.cs" />
     <Compile Include="Librarian.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WaitList\Decorator.cs" />
-    <Compile Include="WaitList\WaitList.cs" />
+    <Compile Include="WaitList\AbsWaitPosition.cs" />
+    <Compile Include="WaitList\WaiPosition.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
