--- a/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
+++ b/Engenharia de Software Aplicada - Individual/LibraryFluxControlSolution/LibraryFluxControl.Domain/LibraryFluxControl.Domain.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Librarian.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaitList\AbsWaitPosition.cs" />
-    <Compile Include="WaitList\WaiPosition.cs" />
+    <Compile Include="WaitList\WaitPosition.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
